--- a/hosts/p50/dotfiles/.config/waybar/style.css
+++ b/hosts/p50/dotfiles/.config/waybar/style.css
@@ -10,7 +10,6 @@
 @define-color textcolor3 #000000;
 @define-color iconcolor #FFFFFF;
 
-
 /*
 @define-color backgroundlight #000000;
 @define-color backgrounddark #000000;
@@ -29,6 +28,7 @@
 
  * {
     font-family: "IosevkaTerm Nerd Font", "Fira Sans Semibold", "Font Awesome 6 Free", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-size: 16px;
     border: none;
     border-radius: 0px;
 }
@@ -71,14 +71,14 @@ window#waybar {
     color: @textcolor1;
     background: @workspacesbackground2;
     border-radius: 3px 3px 3px 3px;
-    min-width: 35px;
+    min-width: 30px;
     transition: all 0.1s linear;
     opacity:1.0;
 }
 
 #workspaces button:hover {
     color: @textcolor1;
-    background: @workspacesbackground2;
+    background: @accentcolor;
     border-radius: 5px 5px 5px 5px;
     opacity:0.7;
 }
@@ -157,11 +157,11 @@ button:hover {
 
 /* you can set a style on hover for any module like this */
 #pulseaudio:hover {
-    background-color: @workspacesbackground2;
+    background-color: @accentcolor;
 }
 
 #custom-logo:hover {
-    background-color: @workspacesbackground2;
+    background-color: @accentcolor;
 }
 
 /* -----------------------------------------------------
@@ -233,14 +233,23 @@ button:hover {
 
 #custom-logo {
     background-color: @backgrounddark;
-    font-size: 18px;
+    font-size: 20px;
     color: @textcolor1;
-    border-radius: 14px 14px 14px 14px;
-    padding: 0px 6px 0px 6px;
-    margin: 2px 5px 2px 10px;
+    border-radius: 3px 14px 14px 14px;
+    padding: 0px 8px 0px 10px;
+    margin: 3px 5px 3px 10px;
     opacity:0.8;
 }
 
+#custom-power {
+    background-color: @backgrounddark;
+    font-size: 18px;
+    color: @textcolor1;
+    border-radius: 14px 3px 14px 14px;
+    padding: 0px 8px 0px 10px;
+    margin: 3px 10px 3px 0px;
+    opacity:0.8;
+}
 
 /*
 #disk,#memory,#cpu,#language {
@@ -255,7 +264,7 @@ button:hover {
     background-color: @backgrounddark;
     font-size: 16px;
     color: @textcolor1;
-    border-radius: 3px 5px 3px 5px;
+    border-radius: 5px 5px 5px 5px;
     padding: 1px 10px 0px 10px;
     margin: 3px 0px 3px 0px;
     opacity:0.8;
@@ -298,10 +307,10 @@ button:hover {
 
 #power-profiles-daemon {
     background-color: @backgroundlight;
-    font-size: 16px;
+    font-size: 14px;
     color: @textcolor2;
     border-radius: 5px 5px 5px 5px;
-    padding: 2px 15px 0px 10px;
+    padding: 0px 15px 0px 10px;
     margin: 3px 0px 3px 0px;
     opacity:0.8;
 }
@@ -329,6 +338,16 @@ label:focus {
 
 
 #cpu {}
+
+#cpu.average {
+    background-color: transparent;
+    color: yellow;
+}
+
+#cpu.high {
+    background-color: transparent;
+    color: #f53c3c;
+}
 
 #memory {}
 
@@ -423,7 +442,8 @@ label:focus {
 }
 
 #temperature.critical {
-    background-color: #eb4d4b;
+    background-color: transparent;
+    color: #eb4d4b;
 }
 
 #idle_inhibitor {
@@ -461,11 +481,10 @@ label:focus {
 }
 
 #language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
+    font-size: 22px;
+    color: @textcolor2;
+    margin: 3px 10px 3px 0px;
+    min-width: 30px;
 }
 
 #keyboard-state {
